check-for-inappropriate-objc-class-names should check all class names, not just externally visible ones https://bugs.webkit.org/show_bug.cgi?id=152156

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-12-11
Reviewed by Dan Bernstein.

Source/JavaScriptCore:

* llvm/InitializeLLVMMac.cpp:
Remove stale comment. The ObjC class this comment referenced
has already been removed.

Source/WebCore:

* platform/graphics/avfoundation/objc/CDMSessionAVContentKeySession.h:
* platform/graphics/avfoundation/objc/CDMSessionAVContentKeySession.mm:
(WebCore::CDMSessionAVContentKeySession::CDMSessionAVContentKeySession):
* platform/graphics/avfoundation/objc/CDMSessionAVStreamSession.h:
* platform/graphics/avfoundation/objc/CDMSessionAVStreamSession.mm:
(WebCore::CDMSessionAVStreamSession::CDMSessionAVStreamSession):
Rename classes with a "Web" prefix.

Source/WebKit2:

* UIProcess/ios/WebVideoFullscreenManagerProxy.mm:
(WebKit::WebVideoFullscreenManagerProxy::setupFullscreenWithID):
* UIProcess/mac/RemoteLayerTreeDrawingAreaProxy.h:
* UIProcess/mac/RemoteLayerTreeDrawingAreaProxy.mm:
(WebKit::RemoteLayerTreeDrawingAreaProxy::RemoteLayerTreeDrawingAreaProxy):
Rename internal classes with "_WK" prefix.

Tools:

Our frameworks should appropriately prefix all ObjC classes,
not just external symbols.

* Scripts/check-for-inappropriate-objc-class-names:
Remove the -g switch to check all ObjC class names.

Canonical link: https://commits.webkit.org/170303@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193972 268f45cc-cd09-0410-ab3c-d52691b4dbfc